# journal-rc

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs  from_draft_to_official.md  kokkos-install-cuda.sh  kokkos-install.sh
.github/workflows/: outside_run_test.yml  rust.yml  tests.yml
KrokkosMacro&Gen/: Cargo.toml
KrokkosMacro&Gen/krokkos_gen/: Cargo.toml
KrokkosMacro&Gen/krokkos_gen/src/: lib.rs
KrokkosMacro&Gen/krokkos_macro/: Cargo.toml
KrokkosMacro&Gen/krokkos_macro/src/: lib.rs
KrokkosMacro&Gen/src/: lib.rs
KrokkosMacro&Gen/test/: Cargo.toml
KrokkosMacro&Gen/test/src/: main.rs
cmake_rust/: CMakeLists.txt  Cargo.toml  build.rs
cmake_rust/src/: ffi.rs  main.rs
cmake_rust/src/cpp/: functions.cpp
cmake_rust/src/include/: functions.hpp
cxx_bench/cxx_test/: build.rs
cxx_bench/cxx_test/include/: arma_bridge.h
cxx_bench/cxx_test/src/: arma_bridge.cc
cxx_bench/kokkos_kernel_test/: Cargo.toml  build.rs
cxx_bench/kokkos_kernel_test/include/: kernel_wrapper.h
cxx_bench/kokkos_kernel_test/src/: kernel_wrapper.cpp  main.rs
cxx_bench/wrapper_test/include/: arma_wrapper.h
cxx_test/include/: arma_bridge.h
cxx_test/src/: arma_bridge.cc  main.rs
docs/.obsidian/: workspace.json
docs/daily-notes/: 1 Octobre 2025.md  22 septembre 2025.md  9 Octobre 2025.md  Bench bridge ndarray <-> mdspan.md
docs/daily-notes/.obsidian/: workspace.json
examples/armadillo-basic/: README.md
examples/armadillo-basic/src/: arma_bridge.cc
examples/kokkos-advanced/: build.rs
examples/kokkos-advanced/include/: kernel_wrapper.h
examples/kokkos-advanced/src/: main.rs
examples/kokkos-interop/: Cargo.toml
examples/kokkos-interop/include/: kernel_wrapper.h
examples/kokkos-interop/src/: lib.rs
examples/kokkos-interop/tests/: test1.rs  tests.rs
examples/kokkos-interop1/: build.rs
examples/kokkos-interop1/src/: lib.rs
examples/kokkos-interop2/: build.rs  errorMsg.txt
examples/kokkos-interop2/include/: kernel_wrapper.h
examples/kokkos-interop2/src/: lib.rs
examples/kokkos-interop2/tests/: tests.rs
examples/lambda-interop/: Cargo.toml  build.rs  errorMsg.txt
examples/lambda-interop/include/: kernel_wrapper.h
examples/lambda-interop/src/: lib.rs
examples/lambda-interop/tests/: dot_prod_test.rs  mat_prod_test.rs  tests.rs
examples/mdspan-interop/: build.rs
examples/mdspan-interop/include/: mdspan_interop.h  mdspan_interop.hpp
examples/mdspan-interop/src/: lib.rs  main.rs
examples/mdspan-interop/tests/: create_shared_test.rs  matrix_product_test.rs  matrix_vector_prod_test.rs  perf_test.cpp  perf_test.rs  type_test.rs  vector_product_test.rs
examples/mdspan-interop2/: Cargo.toml  build.rs
examples/mdspan-interop2/include/: mdspan_interop.hpp
examples/mdspan-interop2/src/: lib.rs
examples/mdspan-interop2/tests/: matrix_product_test.rs  perf_test.cpp  vector_product_test.rs
examples/rust-kokkos-interop/: Cargo.toml
examples/rust-kokkos-interop/tests/: vector_prod_test.rs
examples/simple-wrapper/: Cargo.toml  build.rs
examples/simple-wrapper/include/: arma_wrapper.h
examples/simple-wrapper/src/: arma_wrapper.cpp
krokkos/: Cargo.toml  build.rs
krokkos/Release/: CMakeLists.txt
krokkos/benches/many_calls_bench/: Cargo.toml
krokkos/benches/many_calls_bench/src/: main.rs
krokkos/benches/one_call_bench/: Cargo.toml
krokkos/benches/one_call_bench/src/: main.rs
krokkos/docs/: Cxx for Rust-Kokkos.md  interop_cases.md
krokkos/docs/daily-notes/: 10 Octobre 2025.md
krokkos/macro/: Cargo.toml
krokkos/macro/src/: lib.rs
krokkos/parser/: Cargo.toml
krokkos/parser/src/: lib.rs
krokkos/src/: common_types.rs  lib.rs
krokkos/src/cpp/: functions.cpp  functions_shared_array.cpp  kokkos_handles.cpp  rust_view.cpp  shared_array.cpp
krokkos/src/include/: functions.hpp  functions_shared_array.hpp  rust_view.hpp  rust_view_types.hpp  shared_array.hpp  types.hpp
krokkos/src/rust_view/: data_type.rs  dim.rs  ffi.rs  functions_ffi.rs  layout.rs  memory_space.rs  mod.rs  ops.rs  shared_ffi_types.rs
krokkos/src/shared_array/: ffi.rs  functions_ffi.rs  handle.rs  mod.rs  ops.rs  shared_ffi_types.rs  types.rs
macro/: Cargo.toml
macro/src/: lib.rs
obsidian_notes/: 18 septembre 2025.md  19 septembre 2025.md  23 septembre 2025.md  24 septembre 2025.md  26 septembre 2025.md  Cxx for Rust ↔ Kokkos.md
obsidian_notes/.obsidian/: workspace.json
poc_interop/: Cargo.toml  README.md  build.rs
poc_interop/Release/: CMakeLists.txt
poc_interop/benches/many_calls_bench/: Cargo.toml
poc_interop/benches/one_call_bench/: Cargo.toml
poc_interop/docs/: Bench bridge ndarray <-> mdspan.md  interop_cases.md
poc_interop/docs/daily-notes/: 18 septembre 2025.md
poc_interop/examples/armadillo-basic/: Cargo.toml  build.rs
poc_interop/examples/kokkos-interop2/: Cargo.toml  README.md  build.rs
poc_interop/examples/lambda-interop/: Cargo.toml
poc_interop/examples/mdspan-interop/: Cargo.toml  build.rs
poc_interop/src/: common_types.rs  lib.rs
proto_vec/proto_vec/: Cargo.toml  build.rs
rust-parser/: Cargo.toml  build.rs  interop.cpp  interop.hpp  lib.rs
rust-parser/docs/: Roadmap.md
rust-parser/rupar-tests/: Cargo.toml  build.rs  interop.cpp  interop.hpp
rust-parser/src/: lib.rs
rust-parser/tests/: test.rs
src/: lib.rs
src/cpp/: lambda_wrapper.cpp
src/include/: lambda_wrapper.hpp  view_wrapper.hpp
src/lambda_wrapper/: handle.rs  ops.rs  types.rs
src/rust_view/: ffi.rs  ops.rs
templated/templated_macro/: Cargo.toml
templated/templated_parser/: Cargo.toml
templated_macro/: Cargo.toml
templated_macro/src/: lib.rs
templated_parser/src/: lib.rs
test_krokkos/: Cargo.toml  build.rs
test_krokkos/Release/: CMakeLists.txt
test_krokkos/src/: ffi.rs  main.rs
test_macros/: Cargo.toml  build.rs
test_macros/src/: ffi.rs  main.rs
test_poc_interop/: Cargo.toml
test_poc_interop/src/: main.rs
testeur_rs/include/: arma_bridge.h
tests_macro/: Cargo.toml  build.rs
tests_macro/src/: ffi.rs  main.rs  my_ffi.rs
tools/: README.md  test-all.sh
wrapper_test/src/: main.rs
(+108 files in other folders)
