[package]
name = "krokkos"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
libc = "0.2.0"
cxx = "1.0"
paste = "1.0"
templated_macro = { path = "../templated/templated_macro/." }

[build-dependencies]
cc = "1.0"
cxx-build = "1.0"
templated_parser = { path = "../templated/templated_parser/." }
cmake = "0.1.31"

[features]
default = ["omp"]
omp = []
cuda = []

